1PRVAK/Letni/IVS/Projekty/2/docs/technical/grammar.bnf
expression      ::= <term> (('+' | '-') <term>)*
term            ::= <unary> (('*' | '/') <unary>)*
unary           ::= <sign>* <exponent>
exponent        ::= <factor> ('^' <unary>)?
factor          ::= <integer> | <double> | '(' <expression> ')' | <factor> '!'
double          ::= <integer> (('.' <integer>) | (('E'|'e') <integer>) | ('.' <integer>)(('E'|'e') <integer>))
integer         ::= <digit>+
sign            ::= '-' | '+'
digit           ::= '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'
